removed unused import

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
         "Sistem",
         "sudah",
         "Sumatera",
+        "tabbar",
         "Taman",
         "Tanggal",
         "Teladan",
