--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
     "cSpell.words": [
         "Agung",
         "Airlangga",
+        "Akademik",
         "Akademika",
         "akreditasi",
         "alamat",
         "Alhamdulillah",
         "aman",
+        "Aplikasi",
         "appbar",
         "Bahagia",
         "baik",
@@ -32,6 +34,7 @@
         "kesulitan",
         "kode",
         "Kota",
+        "Kritik",
         "kuliah",
         "Lahir",
         "mampu",
@@ -48,6 +51,7 @@
         "Pengalaman",
         "Perguruan",
         "prodi",
+        "Profil",
         "saya",
         "Sedati",
         "sedikit",
@@ -65,6 +69,7 @@
         "Unggul",
         "Universitas",
         "Utara",
+        "vsync",
         "wireframe"
     ]
 }
